Addressed FindBugs warning